--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('yankuangshi/git-cheat-sheet')
+      fetcher: Flatdoc.file('README.md')
     });
   </script>
 </head>
