--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class='left'>
       <h1>Git Cheat Sheet</h1>
       <ul>
-        <li><a href='https://github.com/USER/REPO'>View on GitHub</a></li>
-        <li><a href='https://github.com/USER/REPO/issues'>Issues</a></li>
+        <li><a href='https://github.com/yankuangshi/git-cheat-sheet'>View on GitHub</a></li>
+        <li><a href='https://github.com/yankuangshi/git-cheat-sheet/issues'>Issues</a></li>
       </ul>
     </div>
     <div class='right'>
